MSG string replaced in Controllers by StringBuilder Added Test for SpringMVC.